# trade-finviz

./: .env.example  .gitignore  HANDOFF.md  README.md  pyproject.toml  requirements.txt
deploy/: weekly-scan.service  weekly-scan.timer
examples/: sample_prices.csv  starter_universe.csv  universe.csv
scripts/: install_weekly_timer.sh  weekly_scan.sh
src/trade_strategy/: __init__.py  backtest.py  cli.py  data.py  indicators.py  notify.py  rotation.py  scanner.py  strategies.py
tests/: test_backtest.py  test_cli.py  test_rotation.py  test_scanner.py
